[http-client] Fix BeanParam on Eclipse (#436)
* fix beanParam on eclipse

low priority, but I guess eclipse prints out the entire method signature

* Format BeanParamReader and remove test code that does not extend coverage

---------

Co-authored-by: Rob Bygrave <robin.bygrave@gmail.com>